--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,6 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
-    </dependency>
-	  <!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
-<dependency>
-<groupId>org.sonarsource.scanner.maven</groupId>
-<artifactId>sonar-maven-plugin</artifactId>
-<version>3.2</version>
 </dependency>
   </dependencies>
 
@@ -65,7 +59,14 @@
 					</systemPropertyVariables>
 				</configuration>
 			</plugin>
+ 
+      <plugin>
+        <groupId>org.sonarsource.scanner.maven</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>3.6.0.1398</version>
+      </plugin>
     </plugins>
+</build>
   </build>
 	
 <profiles>
